--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <body>
     <!-- Here is our main header that is used across all the pages of our website -->
 
-    <header>
+    <header id="conteneur-home">
       <h1 class="okona_t">Okona Kwende</h1>
     </header>
 
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Our team</a></li>
+        <li><a href="skills.html">Skills</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -43,33 +43,24 @@
       <article>
         <h2 class="about_me">About Me</h2>
         <img class="Okona" src="image/okona.jpg" alt="Avatar">
-        <p>My name is Okona Kwende and I am 14 years old.I live i Albany California and I will be a freshman next year at Albay High school. I am currently in the Hidden Genius Project and currently studying programing languages including CSS, HTML, and Javascript. Some skills that I have are drawing, some knowledge of coding languages, and playing my trumpet. Some things that I like to do in ,y free time are playing musical instruments, playing viedo games, reading and  occasionaly coding.</p>
+        <p>My name is Okona Kwende and I am 14 years old.I live i Albany California and I will be a freshman next year at Albay High school. I am now in the Hidden Genius Project and currently studying programing languages including CSS, HTML, and Javascript. Some skills that I have are drawing, some knowledge of coding languages, and playing my trumpet. Some things that I like to do in my free time are playing musical instruments, playing viedo games, reading, occasionaly coding, and drawing. Some artists that I look up to are Kim Jung Gi, Wayne Reynolds, and Levi Prewit. I post art on my Instagram account and the name is @hipshmik2</p>
 
-        <h3 class="subsection">Subsection</h3>
+        <h3 class="subsection">My Timeline</h3>
 
         <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
 
         <p>Pelientesque auctor nisi id magna consequat sagittis. Curabitur dapibus, enim sit amet elit pharetra tincidunt feugiat nist imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.</p>
 
-        <h3 class="portfolio">Portfolio</h3>
+        <h3 class="portfolio">Contact Me</h3>
 
-        <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
+      <p>You can contact me through my email which is okona.kwende@hgs.hiddengeniusproject.org and or you can text me on your phone. My phone numer is 510-612-0939.</p>
 
-        <p>Vivamus fermentum semper porta. Nunc diam velit, adipscing ut tristique vitae sagittis vel odio. Maecenas convallis ullamcorper ultricied. Curabitur ornare, ligula semper consectetur sagittis, nisi diam iaculis velit, is fringille sem nunc vet mi.</p>
+        <p></p>
       </article>
 
       <!-- the aside content can also be nested within the main content -->
-      <aside>
-        <h2 class="related">Related</h2>
 
-        <ul>
-          <li><a href="#">Related</a></li>
-          <li><a href="#">Related</a></li>
-          <li><a href="#">Related</a></li>
-          <li><a href="#">Related</a></li>
-          <li><a href="#">Related</a></li>
-        </ul>
-      </aside>
+
 
 
     </main>
